# pythonicsql

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
pythonicsql/: __init__.py  utils.py
pythonicsql/dialects/: client.py
pythonicsql/dialects/postgres/: __init__.py
pythonicsql/dialects/sqlite/: __init__.py
pythonicsql/query/: query_builder.py  query_compiler.py  statement.py
pythonicsql/query/exceptions/: dialect_not_found.py
pythonicsql/query/model/: database_config.py  raw.py  simple_attributes.py  statement.py
tests/: test_pythonicsql.py
tests/query/: test_query_builder.py  test_query_compiler.py
