[tool.poetry]
name = "pythonicsql"
version = "0.1.0"
description = "SQL Query Builder"
authors = ["Rich Ramalho <richecr1799@gmail.com>"]
maintainers = ["Rich Ramalho <richecr1799@gmail.com>"]
homepage = "https://github.com/richecr/pythonicsql"
repository = "https://github.com/richecr/pythonicsql"
documentation = "https://github.com/richecr/pythonicsql"
keywords = ["sql", "query", "builder", "python", "postgresql", "sqlite"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
ruff = "^0.5.5"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
asyncpg-stubs = "^0.29.1"

[tool.mypy]
exclude = ["tests", "venv", "env"]
strict = true
warn_no_return = false

[tool.mypy-test]
ignore_errors = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
