[project]
name = "pythonicsql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "asyncpg-stubs>=0.30.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]
